# ai-orchestrator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent_orchestrator/: settings.py
agent_orchestrator/api/: main.py
agent_orchestrator/cli/: main.py
agent_orchestrator/db/: __init__.py  models.py  session.py
agent_orchestrator/ecc/: __init__.py  service.py
agent_orchestrator/graph/: __init__.py  workflow.py
agent_orchestrator/jobs/: __init__.py  redis_worker.py
agent_orchestrator/obsidian/: __init__.py  config.py  reader.py  schemas.py  service.py  sync.py  templates.py  vault.py  writer.py
agent_orchestrator/safety/: command_policy.py  redaction.py
agent_orchestrator/services/: run_ops.py  worktree_manager.py
agent_orchestrator/workers/: base.py  claude_codex_cursor.py  mock_worker.py  registry.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
tests/: test_command_policy.py  test_graph_workflow.py  test_worktree_dispatch.py
workspace/repos/example-repo/: README.md
workspace/tasks/: example_task.md
